<resources>
    <string name="app_name">Garage</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_default_display_toggle_request">Toggle Request Path</string>
    <string name="pref_default_display_mqtt_bridge_status_request">MqttBridge Status Path</string>
    <string name="pref_default_display_door_sensor_request">Door Sensor Request Path</string>

    <string name="toggle_request_mapping">/default/path/toggle</string>
    <string name="mqtt_bridge_status_request_mapping">/default/path/mqttclient/status</string>
    <string name="door_sensor_request_mapping">/default/path/device/sensordata/id</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_network">My network</string>

    <string name="pref_title_social_recommendations">Enable indicator buttons</string>
    <string name="pref_description_social_recommendations">Indicator helps show you if there is a valid connection to your
        IOT device
    </string>

    <string name="pref_title_server_address">Server HTTPS Address</string>
    <string name="pref_default_server_address">Enter your URL or IP Address</string>

    <string name="pref_title_server_username">Server Username</string>
    <string name="pref_default_server_username">username</string>

    <string name="pref_title_server_password">Server Password</string>
    <string name="pref_default_server_password">password</string>


    <string name="pref_title_add_friends_to_messages">Number of buttons</string>

    <string-array name="pref_example_list_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
