<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_server_address"
        android:inputType="textCapWords"
        android:key="server_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_address" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_server_username"
        android:inputType="textCapWords"
        android:key="server_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_username" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_server_password"
        android:inputType="textCapWords"
        android:key="server_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_password" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/toggle_request_mapping"
        android:inputType="textCapWords"
        android:key="toggleRequestMapping"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_display_toggle_request" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/door_sensor_request_mapping"
        android:inputType="textCapWords"
        android:key="doorSensorRequestMapping"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_display_door_sensor_request" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/mqtt_bridge_status_request_mapping"
        android:inputType="textCapWords"
        android:key="mqttBridge"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_display_mqtt_bridge_status_request" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
